# Belief-PDDL

./: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  run_all_experiments.sh  summarize_results.py
domains/alfworld/: constraints.yaml  domain.pddl  predicates.yaml
domains/blocksworld/: constraints.yaml  domain.pddl  predicates.yaml
notebooks/: blocksworld_demo.ipynb
scripts/: analyze_seed_bifurcation.py  collect_rollouts.py  compare_perception_methods.py  demo_phase1_2.py  diagnose_controller_gap.py  diagnose_perception_gap.py  diff_projection_collapse.py  extract_collapse_windows.py  run_alfworld_eval.py  run_benchmarks.py  run_seed_sweep.py  test_alfworld.py  test_belief.py  test_perception.py  test_planning.py  trace_temporal_gap.py
src/belief/: projection.py  state.py  update.py
src/belief_pddl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: episode_schema.py
src/envs/: alfworld_env.py
src/execution/: replan_loop.py
src/perception/: alfworld_text.py  backbones.py  binary_head.py  blocksworld_predicates.py  calibrate.py  clip_vision.py  crop_builder.py  predicate_queries.py  unary_head.py
src/planning/: deterministic_planner.py  sample_belief_planner.py
tests/mocks/: blocksworld_env.py  run_mock_eval.py
