[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "belief_pddl"
version = "0.1.0"
description = "A neuro-symbolic planner maintaining calibrated predicate beliefs and acting with verifier-projected consistency."
authors = [
  {name = "Belief-PDDL Author"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "transformers",
    "alfworld",
    "numpy",
    "pyyaml",
    "hydra-core>=1.3.0",
    "ortools>=9.0",
    "pyperplan",
    "pandas",
    "pyarrow",
    "Pillow"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
